Replace Image Vectors with PNGs
Vectors are causing crashes in KitKat devices.
This is a sufficient work around

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -30,12 +30,12 @@
         android:paddingEnd="16dp"
         android:paddingStart="16dp"
         android:background="?attr/selectableItemBackground"
-        android:drawableBottom="@drawable/ic_file_download_black_24dp"
         android:focusable="true"
         android:text="To use this app you need Pocket. Download Pocket here if you don't have it."
         android:textAlignment="center"
         android:textColor="@android:color/holo_blue_dark"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:drawableBottom="@drawable/ic_file_download_black_24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description1" />
@@ -61,12 +61,12 @@
         android:layout_marginBottom="16dp"
         android:layout_marginStart="16dp"
         android:background="?attr/selectableItemBackground"
-        android:drawableBottom="@drawable/ic_code_black_24dp"
         android:drawablePadding="8dp"
         android:focusable="true"
         android:text="View the Source Code on GitHub"
         android:textAlignment="center"
         android:textColor="@android:color/holo_blue_dark"
+        android:drawableBottom="@drawable/ic_code_black_24dp"
         app:layout_constraintBottom_toTopOf="@+id/share_button"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -77,12 +77,12 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:background="?attr/selectableItemBackground"
-        android:drawableBottom="@drawable/ic_person_pin_black_24dp"
         android:drawablePadding="8dp"
         android:focusable="true"
         android:text="Visit my site at chris-guzman.com"
         android:textAlignment="center"
         android:textColor="@android:color/holo_blue_dark"
+        android:drawableBottom="@drawable/ic_person_pin_black_24dp"
         app:layout_constraintBottom_toTopOf="@+id/share_button"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -95,6 +95,7 @@
         android:layout_marginTop="8dp"
         android:scaleType="fitXY"
         android:scaleY="-1"
+        android:contentDescription="Cartoon finger pointing down"
         app:layout_constraintBottom_toTopOf="@+id/github"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description2"
@@ -110,6 +111,7 @@
         android:scaleType="fitXY"
         android:scaleY="-1"
         android:scaleX="-1"
+        android:contentDescription="Cartoon finger pointing down"
         app:layout_constraintBottom_toTopOf="@+id/chris_site"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description2"
@@ -122,9 +124,9 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:drawableEnd="@drawable/ic_share_black_24dp"
         android:drawablePadding="8dp"
         android:text="Share this app"
+        android:drawableEnd="@drawable/ic_share_black_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
